demos/github_review_agent/openshift/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v002
  labels:
    app: frontend-v002
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-v002
  template:
    metadata:
      labels:
        app: frontend-v002
    spec:
      containers:
      - name: frontend-v002
        image: quay.io/shanand/cloud-native-agents-frontend:v0.0.2
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /opt/app-root/src/config
      volumes:
      - name: config-volume
        emptyDir: {}
